commit yoprint test php laravel version

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,24 @@
-# Node modules
-node_modules/
-
-# Environment and configuration
-.env
-.env.*
-!.env.sample
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Runtime data
-data/*.sqlite
-data/*.sqlite-wal
-data/*.sqlite-shm
-
-# Uploaded files
-uploads/
-temp/
-
-# Coverage / reports
-coverage/
-*.lcov
-
-# Build artifacts
-dist/
-build/
-
-# OS files
-Thumbs.db
+*.log
 .DS_Store
-
-# IDE files
-.vscode/
-.idea/
-
-
+.env
+.env.backup
+.env.production
+.phpactor.json
+.phpunit.result.cache
+/.fleet
+/.idea
+/.nova
+/.phpunit.cache
+/.vscode
+/.zed
+/auth.json
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
+Homestead.json
+Homestead.yaml
+Thumbs.db
