--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
-  "name": "yoprinttest",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "worker": "node src/worker.js",
-    "dev": "nodemon src/server.js",
-    "lint": "echo \"No linter configured\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bull": "^4.16.5",
-    "csv-parse": "^6.1.0",
-    "dayjs": "^1.11.19",
-    "dotenv": "^17.2.3",
-    "express": "^4.21.2",
-    "iconv-lite": "^0.7.0",
-    "multer": "^2.0.2",
-    "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "$schema": "https://www.schemastore.org/package.json",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite"
+    },
+    "devDependencies": {
+        "@tailwindcss/vite": "^4.0.0",
+        "axios": "^1.11.0",
+        "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^2.0.0",
+        "tailwindcss": "^4.0.0",
+        "vite": "^7.0.7"
+    }
 }
