--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:LDQzrYEdDiOmUuQBkz/NwjaZt1I25mhP31vooR5V+ME=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
- DB_CONNECTION=sqlite
+DB_CONNECTION=sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
